--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,8 +12,8 @@ on:
 jobs:
   changelog:
     uses: ansible-network/github_actions/.github/workflows/changelog.yml@main
-  # sanity:
-  # uses: ansible-network/github_actions/.github/workflows/sanity.yml@main
+  sanity:
+    uses: ansible-network/github_actions/.github/workflows/sanity.yml@main
 
   all_green:
     if: ${{ always() }}
