enhance default behaviour
Signed-off-by: Rohit Thakur <rohitthakur2590@outlook.com>

--- a/roles/resource_manager/includes/build.yml
+++ b/roles/resource_manager/includes/build.yml
@@ -11,6 +11,6 @@
 
 - include: includes/write_to_file.yaml
   when:
-    - inventory_directory is defined
+    - perform_task == 'persist'
     - result["gathered"] != {}
     - result["gathered"] != []
