--- a/roles/resource_manager/includes/write_to_file.yaml
+++ b/roles/resource_manager/includes/write_to_file.yaml
@@ -1,4 +1,9 @@
 ---
+- name: Set default path
+  set_fact:
+    inventory_directory: ./inventory
+  when: inventory_directory is not defined
+
 - name: Create inventory directory
   file:
     path: "{{ inventory_directory }}/host_vars/{{ inventory_hostname }}"
