Update write defualt functionality
Signed-off-by: Rohit Thakur <rohitthakur2590@outlook.com>

--- a/roles/resource_manager/includes/configure.yaml
+++ b/roles/resource_manager/includes/configure.yaml
@@ -9,6 +9,11 @@
     file: "{{ item.path }}"
     name: module_vars
 
+- name: Set default state
+  set_fact:
+    state: 'merged'
+  when: state is not defined
+
 - include_tasks: includes/edit_resource.yaml
   when:
     - resources is defined
