--- a/roles/resource_manager/includes/deploy.yaml
+++ b/roles/resource_manager/includes/deploy.yaml
@@ -1,4 +1,9 @@
 ---
+- name: Set default path
+  set_fact:
+    inventory_directory: ./inventory
+  when: inventory_directory is not defined
+
 - name: Get list of files
   find:
     paths: "{{ inventory_directory }}/host_vars/{{ inventory_hostname }}"
