--- a/roles/resource_manager/includes/write_to_file.yaml
+++ b/roles/resource_manager/includes/write_to_file.yaml
@@ -9,6 +9,15 @@
     path: "{{ inventory_directory }}/host_vars/{{ inventory_hostname }}"
     state: directory
 
+- name: Check that the inventory exists
+  stat:
+    path: "./{{ inventory_directory }}/inventory.yaml"
+  register: stat_result
+
+- name: Create the file, if it doesnt exist already
+  command: cp -r ./inventory.yaml {{ inventory_directory }}/
+  when: not stat_result.stat.exists
+
 - name: Write each resource to a file
   copy:
     content: "{{ {item: result['gathered']} | to_nice_yaml }}"
