--- a/roles/resource_manager/includes/build.yml
+++ b/roles/resource_manager/includes/build.yml
@@ -8,9 +8,11 @@
 
 - debug:
     msg: "{{ result }}"
+  when:
+    - action != 'persist'
 
 - include: includes/write_to_file.yaml
   when:
-    - perform_task == 'persist'
+    - action == 'persist'
     - result["gathered"] != {}
     - result["gathered"] != []
