--- a/roles/resource_manager/tasks/health_ping.yaml
+++ b/roles/resource_manager/tasks/health_ping.yaml
@@ -1,1 +1,3 @@
-- include_tasks: includes/bgp_summary.yaml
+---
+- name: Include BGP Summary Task
+  ansible.builtin.include_tasks: includes/bgp_summary.yaml
