update linter fixes
Signed-off-by: Rohit Thakur <rohitthakur2590@outlook.com>

--- a/roles/resource_manager/tasks/list.yaml
+++ b/roles/resource_manager/tasks/list.yaml
@@ -5,5 +5,5 @@
   register: available_network_resources
 
 - name: Available Network resources
-  debug:
+  ansible.builtin.debug:
     msg: "{{ available_network_resources }}"
