--- a/roles/resource_manager/includes/write_to_file.yaml
+++ b/roles/resource_manager/includes/write_to_file.yaml
@@ -5,7 +5,7 @@
   when: inventory_directory is not defined
 
 - name: Create inventory directory
-  file:
+  ansible.buitin.file:
     path: "{{ inventory_directory }}/host_vars/{{ inventory_hostname }}"
     state: directory
 
