update_sanity_fixes
Signed-off-by: Rohit Thakur <rohitthakur2590@outlook.com>

--- a/roles/resource_manager/includes/build.yml
+++ b/roles/resource_manager/includes/build.yml
@@ -13,7 +13,7 @@
     - action != 'persist'
 
 - name: Include file write task
-  ansible.builtin.include: includes/write_to_file.yaml
+  ansible.builtin.include_tasks: includes/write_to_file.yaml
   when:
     - action == 'persist'
     - result["gathered"] != {}
