Fix dynamic mosule invocation
Signed-off-by: rohitthakur2590 <rohitthakur2590@outlook.com>

--- a/roles/resource_manager/includes/edit_resource.yaml
+++ b/roles/resource_manager/includes/edit_resource.yaml
@@ -2,7 +2,7 @@
 - name: Apply provided configuration
   ansible.netcommon.network_resource:
     os_name: "{{ ansible_network_os }}"
-    name: "junos_{{ lst }}"
+    name: "{{ ansible_network_os.split('.')[-1] }}_{{ lst }}"
     config: "{{ module_vars[resource] }}"
     state: "{{ state }}"
   when: lst  in resources
