--- a/roles/resource_manager/includes/edit_resource.yaml
+++ b/roles/resource_manager/includes/edit_resource.yaml
@@ -5,4 +5,6 @@
     name: "{{ ansible_network_os.split('.')[-1] }}_{{ lst }}"
     config: "{{ module_vars[resource] }}"
     state: "{{ state }}"
-  when: lst  in resources
+  when:
+    - lst in resources
+    - "{{ module_vars[resource] }}"
