Enhancement to support ignore errors and empty config
Signed-off-by: rohitthakur2590 <rohitthakur2590@outlook.com>

--- a/roles/resource_manager/includes/configure.yaml
+++ b/roles/resource_manager/includes/configure.yaml
@@ -23,7 +23,7 @@
 - name: Apply configuration
   ansible.netcommon.network_resource:
     os_name: "{{ ansible_network_os }}"
-    name: "{{ ansible_network_os.split('.')[-1] }}_{{ lst }}"
+    name: "{{ ansible_network_os.split('.')[-1] }}_{{ name }}"
     config: "{{ module_vars[resource] }}"
     state: "{{ state }}"
   when:
