--- a/changelogs/fragments/feature_detect_restore.yaml
+++ b/changelogs/fragments/feature_detect_restore.yaml
@@ -1,3 +1,3 @@
 ---
 minor_changes:
-	Add feature which support detect and remediate actions.
+  - Add feature which support detect and remediate actions.
