Fix Detect to provide collection prefix
Signed-off-by: rohitthakur2590 <rohitthakur2590@outlook.com>

--- a/roles/resource_manager/includes/check_drift.yaml
+++ b/roles/resource_manager/includes/check_drift.yaml
@@ -11,7 +11,7 @@
 - name: Check for config drift
   ansible.netcommon.network_resource:
     os_name: "{{ ansible_network_os }}"
-    name: "{{ resource }}"
+    name: "{{ ansible_network_os.split('.')[-1] }}_{{ resource }}"
     config: "{{ module_vars[resource] }}"
     state: overridden
   check_mode: true
