--- a/galaxy.yml
+++ b/galaxy.yml
@@ -2,8 +2,8 @@
 authors:
   - Rohit Thakur (@rohitthakur2590)
 dependencies:
-  "ansible.netcommon": "*"
-  "ansible.utils": '*'
+  "ansible.netcommon": ">=4.1.0"
+  "ansible.utils": '>=2.7.0'
 license_file: LICENSE
 name: base
 description: Ansible Network Collection provides platform-agnostic resource management for given network OS.
