--- a/roles/resource_manager/includes/write_to_file.yaml
+++ b/roles/resource_manager/includes/write_to_file.yaml
@@ -9,19 +9,11 @@
     path: "host_vars/{{ inventory_hostname }}"
     state: directory
 
-# - name: Check that the inventory exists
-#   ansible.builtin.stat:
-#     path: "{{ inventory_directory }}/inventory.yaml"
-#   register: stat_result
-
-# - name: Create the file, if it doesn't exist already
-#   ansible.builtin.command: cp -r ./inventory.yaml {{ inventory_directory }}/
-#   when: not stat_result.stat.exists
-
 - name: Write each resource to a file
   ansible.builtin.copy:
     content: "{{ {item: result['gathered']} | to_nice_yaml }}"
     dest: "host_vars/{{ inventory_hostname }}/{{ item }}.yaml"
+    mode: '644'
   when:
     - result['gathered'] != {}
     - result['gathered'] != []
@@ -30,6 +22,7 @@
   ansible.builtin.copy:
     content: "{{ item }}:"
     dest: "host_vars/{{ inventory_hostname }}/{{ item }}.yaml"
+    mode: '644'
   when:
     - result['gathered'] == {} or result['gathered'] == []
     - persist_empty is true
