--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -55,3 +55,5 @@ releases:
     - update_base_docs.yaml
     - update_readme.yaml
     release_date: '2023-02-23'
+  2.1.0:
+    release_date: '2023-04-18'
