--- a/roles/resource_manager/tasks/persist.yaml
+++ b/roles/resource_manager/tasks/persist.yaml
@@ -13,6 +13,32 @@
   ansible.builtin.set_fact:
     network_resources: "{{ network_resources_list['modules'] | ansible.utils.param_list_compare(resources) }}"
 
+
+- name: Include retrieve tasks
+  ansible.builtin.include_tasks: includes/retrieve.yaml
+  when: origin is defined 
+
+# - name: Retrieve a repository from a distant location and make it available locally
+#   ansible.scm.git_retrieve:
+#     origin:
+#       url: "{{ origin }}"
+#     parent_directory: "{{ inventory_directory }}"
+#   register: repository
+#   when: origin is defined 
+
+# - name: Retrieve a repository from a distant location and make it available locally
+#   ansible.scm.git_retrieve:
+#     origin:
+#       url: git@github.com:rohitthakur2590/network_validated_content_demo.git
+#     parent_directory: "/home/rothakur/ansible-collections/collections/ansible_collections/network/bgp/"
+#   register: repository
+#   when: origin is defined 
+
 - name: Include build tasks
   ansible.builtin.include_tasks: includes/build.yml
   loop: "{{ network_resources['actionable'] }}"
+
+- name: Include build tasks
+  ansible.builtin.include_tasks: includes/publish.yaml
+  when: origin is defined 
+
