--- a/roles/resource_manager/includes/inventory.yaml
+++ b/roles/resource_manager/includes/inventory.yaml
@@ -1,6 +1,11 @@
 ---
 - name: Set default path
   ansible.builtin.set_fact:
+    inventory_directory: "."
+  when: inventory_directory is not defined
+
+- name: Set default path
+  ansible.builtin.set_fact:
     inventory_path: "{{ repository['path'] }}"
   when: origin is defined
 
