Add token support
Signed-off-by: rohitthakur2590 <rohitthakur2590@outlook.com>

--- a/roles/resource_manager/includes/retrieve.yaml
+++ b/roles/resource_manager/includes/retrieve.yaml
@@ -3,5 +3,6 @@
   ansible.scm.git_retrieve:
     origin:
       url: "{{ origin }}"
+      token: "{{ token }}"
     parent_directory: "{{ inventory_directory }}"
   register: repository
