--- a/roles/resource_manager/tasks/persist.yaml
+++ b/roles/resource_manager/tasks/persist.yaml
@@ -13,6 +13,10 @@
   ansible.builtin.set_fact:
     network_resources: "{{ network_resources_list['modules'] | ansible.utils.param_list_compare(resources) }}"
 
+- name: Set default path
+  ansible.builtin.set_fact:
+    inventory_directory: "."
+  when: inventory_directory is not defined
 
 - name: Include retrieve tasks
   ansible.builtin.include_tasks: includes/retrieve.yaml
