--- a/roles/resource_manager/includes/deploy.yaml
+++ b/roles/resource_manager/includes/deploy.yaml
@@ -1,4 +1,9 @@
 ---
+- name: Set default path
+  ansible.builtin.set_fact:
+    inventory_directory: "."
+  when: origin is defined
+
 - name: Retrieve a repository from a distant location and make it available locally
   ansible.builtin.include_tasks: includes/retrieve.yaml
   when: origin is defined 
@@ -8,7 +13,7 @@
 
 # - name: Set default path
 #   ansible.builtin.set_fact:
-#     inventory_directory: ./inventory
+#     inventory_directory: "."
 #   when: inventory_directory is not defined
 
 - name: Get list of files
