Fix token commit issue
Signed-off-by: rohitthakur2590 <rohitthakur2590@outlook.com>

--- a/roles/resource_manager/includes/publish.yaml
+++ b/roles/resource_manager/includes/publish.yaml
@@ -8,4 +8,4 @@
 - name: Publish the changes
   ansible.scm.git_publish:
     path: "{{ repository['path'] }}"
-  when: token is not defined
+  when: token is undefined
