--- a/roles/resource_manager/includes/retrieve.yaml
+++ b/roles/resource_manager/includes/retrieve.yaml
@@ -13,5 +13,5 @@
     origin:
       url: "{{ origin }}"
     parent_directory: "{{ inventory_directory }}"
-  when: token is not defined
+  when: token is undefined
   register: repository
