increase timeout timer for github operations
Signed-off-by: rohitthakur2590 <rohitthakur2590@outlook.com>

--- a/roles/resource_manager/includes/publish.yaml
+++ b/roles/resource_manager/includes/publish.yaml
@@ -1,11 +1,13 @@
 ---
-- name: Publish the changes
+- name: Publish the persist changes
   ansible.scm.git_publish:
     path: "{{ repository['path'] }}"
-    token: "{{ token }}"
-  when: token is defined
+    timeout: 120
+  when: token is undefined
 
 - name: Publish the changes
   ansible.scm.git_publish:
     path: "{{ repository['path'] }}"
-  when: token is undefined
+    token: "{{ token }}"
+    timeout: 120
+  when: token is defined
