--- a/roles/resource_manager/includes/configure.yaml
+++ b/roles/resource_manager/includes/configure.yaml
@@ -23,7 +23,7 @@
 - name: Apply configuration
   ansible.netcommon.network_resource:
     os_name: "{{ ansible_network_os }}"
-    name: "{{ name.aplit('.')[-1] }}"
+    name: "{{ name.split('.')[-1] }}"
     config: "{{ module_vars[resource] }}"
     state: "{{ state }}"
   when:
