--- a/roles/resource_manager/includes/inventory.yaml
+++ b/roles/resource_manager/includes/inventory.yaml
@@ -1,15 +1,20 @@
 ---
-- name: Set default path
+- name: Set default host vars path
   ansible.builtin.set_fact:
     inventory_directory: "."
-  when: inventory_directory is not defined
+  when: data_store.local is not defined
+
+- name: Set default host vars path
+  ansible.builtin.set_fact:
+    inventory_directory: "{{ data_store['local'] }}"
+  when: data_store.local is defined
 
 - name: Set default path
   ansible.builtin.set_fact:
     inventory_path: "{{ repository['path'] }}"
-  when: origin is defined
+  when: repository is defined
 
 - name: Set default path
   ansible.builtin.set_fact:
     inventory_path: "{{ inventory_directory }}"
-  when: origin is not defined
+  when: repository is not defined
