--- a/roles/resource_manager/includes/write_to_file.yaml
+++ b/roles/resource_manager/includes/write_to_file.yaml
@@ -1,17 +1,4 @@
 ---
-# - name: Set default path
-#   ansible.builtin.set_fact:
-#     inventory_directory: "{{ repository['path'] }}"
-#   when: inventory_directory is not defined
-
-# - name: Create inventory directory
-#   ansible.builtin.file:
-#     path: "{{ inventory_directory }}/host_vars/{{ inventory_hostname }}"
-#     state: directory
-
-- name: Include file write task
-  ansible.builtin.include_tasks: includes/inventory.yaml
-
 - name: Create inventory directory
   ansible.builtin.file:
     path: "{{ inventory_path }}/host_vars/{{ inventory_hostname }}"
@@ -22,15 +9,15 @@
     content: "{{ {item: result['gathered']} | to_nice_yaml }}"
     dest: "{{ inventory_path }}/host_vars/{{ inventory_hostname }}/{{ item }}.yaml"
     mode: '644'
-  when:
-    - result['gathered'] != {}
-    - result['gathered'] != []
+#   when:
+#     - result['gathered'] != {}
+#     - result['gathered'] != []
 
-- name: Write each empty resource to a file
-  ansible.builtin.copy:
-    content: "{{ item }}:"
-    dest: "{{ inventory_path }}/host_vars/{{ inventory_hostname }}/{{ item }}.yaml"
-    mode: '644'
-  when:
-    - result['gathered'] == {} or result['gathered'] == []
-    - persist_empty is true
+# - name: Write each empty resource to a file
+#   ansible.builtin.copy:
+#     content: "{{ item }}:"
+#     dest: "{{ inventory_path }}/host_vars/{{ inventory_hostname }}/{{ item }}.yaml"
+#     mode: '644'
+#   when:
+#     - result['gathered'] == {} or result['gathered'] == []
+#     - persist_empty is true
