--- a/roles/resource_manager/includes/write_to_file.yaml
+++ b/roles/resource_manager/includes/write_to_file.yaml
@@ -3,21 +3,10 @@
   ansible.builtin.file:
     path: "{{ inventory_path }}/host_vars/{{ inventory_hostname }}"
     state: directory
+    mode: '644'
 
 - name: Write each resource to a file
   ansible.builtin.copy:
     content: "{{ {item: result['gathered']} | to_nice_yaml }}"
     dest: "{{ inventory_path }}/host_vars/{{ inventory_hostname }}/{{ item }}.yaml"
     mode: '644'
-#   when:
-#     - result['gathered'] != {}
-#     - result['gathered'] != []
-
-# - name: Write each empty resource to a file
-#   ansible.builtin.copy:
-#     content: "{{ item }}:"
-#     dest: "{{ inventory_path }}/host_vars/{{ inventory_hostname }}/{{ item }}.yaml"
-#     mode: '644'
-#   when:
-#     - result['gathered'] == {} or result['gathered'] == []
-#     - persist_empty is true
