update detect and  remediate fixes
Signed-off-by: rohitthakur2590 <rohitthakur2590@outlook.com>

--- a/roles/resource_manager/includes/build.yml
+++ b/roles/resource_manager/includes/build.yml
@@ -2,7 +2,7 @@
 - name: Run the platform facts module
   ansible.netcommon.network_resource:
     os_name: "{{ ansible_network_os }}"
-    name: "{{ ansible_network_os }}_{{ item }}"
+    name: "{{ ansible_network_os }}_{{ res }}"
     state: gathered
   register: result
 
