--- a/roles/resource_manager/includes/write_to_file.yaml
+++ b/roles/resource_manager/includes/write_to_file.yaml
@@ -7,6 +7,6 @@
 
 - name: Write each resource to a file
   ansible.builtin.copy:
-    content: "{{ {item: result['gathered']} | to_nice_yaml }}"
-    dest: "{{ inventory_path }}/host_vars/{{ inventory_hostname }}/{{ item }}.yaml"
+    content: "{{ {res: result['gathered']} | to_nice_yaml }}"
+    dest: "{{ inventory_path }}/host_vars/{{ inventory_hostname }}/{{ res }}.yaml"
     mode: '0755'
