--- a/roles/resource_manager/tasks/persist.yaml
+++ b/roles/resource_manager/tasks/persist.yaml
@@ -23,6 +23,8 @@
 - name: Include build tasks
   ansible.builtin.include_tasks: includes/build.yml
   loop: "{{ network_resources['actionable'] }}"
+  loop_control:
+    loop_var: res
 
 - name: Include build tasks
   ansible.builtin.include_tasks: includes/publish.yaml
