--- a/roles/resource_manager/includes/configure.yaml
+++ b/roles/resource_manager/includes/configure.yaml
@@ -1,13 +1,13 @@
 ---
 - name: Set facts
   ansible.builtin.set_fact:
-    name: "{{ ansible_network_os }}_{{ (item.path | basename).split('.') | first }}"
-    resource: "{{ (item.path | basename).split('.') | first }}"
-    lst: "{{ (item.path | basename).split('.') | first }}"
+    name: "{{ ansible_network_os }}_{{ (file.path | basename).split('.') | first }}"
+    resource: "{{ (file.path | basename).split('.') | first }}"
+    lst: "{{ (file.path | basename).split('.') | first }}"
 
 - name: Grab the resource facts
   ansible.builtin.include_vars:
-    file: "{{ item.path }}"
+    file: "{{ file.path }}"
     name: module_vars
 
 - name: Set default state
