--- a/roles/resource_manager/includes/deploy.yaml
+++ b/roles/resource_manager/includes/deploy.yaml
@@ -1,12 +1,10 @@
 ---
-- name: Set default path
-  ansible.builtin.set_fact:
-    inventory_directory: "."
-  when: origin is defined
+- name: Resolve inventory
+  ansible.builtin.include_tasks: includes/inventory.yaml
 
 - name: Retrieve a repository from a distant location and make it available locally
   ansible.builtin.include_tasks: includes/retrieve.yaml
-  when: origin is defined
+  when: data_store.scm is defined
 
 - name: Include file write task
   ansible.builtin.include_tasks: includes/inventory.yaml
@@ -23,4 +21,5 @@
   ansible.builtin.include_tasks: includes/configure.yaml
   loop: "{{ found_directories.files }}"
   loop_control:
-    label: "{{ item.path | basename }}"
+    loop_var: file
+    label: "{{ file.path | basename }}"
