--- a/roles/resource_manager/tasks/gather.yml
+++ b/roles/resource_manager/tasks/gather.yml
@@ -9,7 +9,7 @@
     resources: "{{ network_resources_list['modules'] }}"
   when: resources is undefined
 
-- name: Set network resorces
+- name: Set network resources
   ansible.builtin.set_fact:
     network_resources: "{{ network_resources_list['modules'] | ansible.utils.param_list_compare(resources) }}"
 
