--- a/roles/resource_manager/tasks/deploy.yml
+++ b/roles/resource_manager/tasks/deploy.yml
@@ -1,3 +1,3 @@
 ---
 - name: Include Deploy task
-  ansible.builtin.include_tasks: includes/deploy.yaml
+  ansible.builtin.include_tasks: includes/deploy.yml
