Fix provided loop var with in gather action
Signed-off-by: rohitthakur2590 <rohitthakur2590@outlook.com>

--- a/roles/resource_manager/tasks/gather.yaml
+++ b/roles/resource_manager/tasks/gather.yaml
@@ -16,3 +16,5 @@
 - name: Include build tasks
   ansible.builtin.include_tasks: includes/build.yml
   loop: "{{ network_resources['actionable'] }}"
+  loop_control:
+    loop_var: res
